--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,14 +12,13 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+    - uses: DeLaGuardo/setup-graalvm@4.0
       with:
-        java-version: '11'
-        distribution: 'adopt'
+        graalvm: '21.1.0'
+        java: 'java11'
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: ./mvnw package
