--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,9 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: DeLaGuardo/setup-graalvm@4.0
+    - uses: ayltai/setup-graalvm@v1
       with:
-        graalvm: '21.1.0'
-        java: 'java11'
+        java-version: 11
+        graalvm-version: 21.1.0
+        native-image: true
     - name: Build with Maven
       run: ./mvnw package
