--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.codecentric</groupId>
@@ -16,6 +16,7 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <graalvm.version>21.1.0</graalvm.version>
+    <awssdk1.version>1.2.1</awssdk1.version>
   </properties>
 
   <dependencies>
@@ -24,6 +25,16 @@
       <artifactId>graal-sdk</artifactId>
       <version>${graalvm.version}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-lambda-java-core</artifactId>
+      <version>${awssdk1.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.formkiq</groupId>
+      <artifactId>lambda-runtime-graalvm</artifactId>
+      <version>2.3.1</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -60,7 +71,7 @@
         <configuration>
           <skip>false</skip>
           <imageName>serverless-astra-graalvm</imageName>
-          <mainClass>com.github.codecentric.App</mainClass>
+          <mainClass>com.formkiq.lambda.runtime.graalvm.LambdaRuntime</mainClass>
           <buildArgs>
             --no-fallback
           </buildArgs>
