--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
       env: 
         GOTF_VERSION: 0.13.0
       run: |
-        wget https://github.com/craftypath/gotf/releases/download/v$GOTF_VERSION/gotf_$GOTF_VERSION_linux_amd64.tar.gz
+        wget https://github.com/craftypath/gotf/releases/download/v${GOTF_VERSION}/gotf_${GOTF_VERSION}_linux_amd64.tar.gz
         tar -xf gotf_$GOTF_VERSION_linux_amd64.tar.gz
         chmod u+x gotf
         mkdir -p ~/.terraform.d
