--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,7 +34,7 @@ jobs:
         GOTF_VERSION: 0.13.0
       run: |
         wget https://github.com/craftypath/gotf/releases/download/v${GOTF_VERSION}/gotf_${GOTF_VERSION}_linux_amd64.tar.gz
-        tar -xf gotf_$GOTF_VERSION_linux_amd64.tar.gz
+        tar -xf gotf_${GOTF_VERSION}_linux_amd64.tar.gz
         chmod u+x gotf
         mkdir -p ~/.terraform.d
         echo "$TFRC_CREDENTIALS_FILE" > ~/.terraform.d/credentials.tfrc.json
