--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,7 +37,7 @@ jobs:
         tar -xf gotf_${GOTF_VERSION}_linux_amd64.tar.gz
         chmod u+x gotf
         mkdir -p ~/.terraform.d
-        echo "${{ secrets.TFRC_CREDENTIALS_FILE }}" > ~/.terraform.d/credentials.tfrc.json
+        echo "${{ secrets.TFRC_CREDENTIALS_FILE }}" | base64 -d > ~/.terraform.d/credentials.tfrc.json
     - name: Terraform
       env:
         TF_VAR_astra_client_token: ${{ secrets.ASTRA_ADMIN_CLIENT_TOKEN }}
