--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
           <mainClass>com.formkiq.lambda.runtime.graalvm.LambdaRuntime</mainClass>
           <buildArgs>
             --no-fallback
+            --enable-url-protocols=http
           </buildArgs>
         </configuration>
       </plugin>
