--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
       <version>1.2.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5-fluent</artifactId>
+      <version>5.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
