--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <maven.compiler.target>11</maven.compiler.target>
     <graalvm.version>21.1.0</graalvm.version>
     <awssdk1.version>1.2.1</awssdk1.version>
+    <lambda-events.version>3.9.0</lambda-events.version>
     <junit.version>5.7.2</junit.version>
     <testcontainers.version>1.15.3</testcontainers.version>
   </properties>
@@ -32,6 +33,11 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
       <version>${awssdk1.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-lambda-java-events</artifactId>
+      <version>${lambda-events.version}</version>
     </dependency>
     <dependency>
       <groupId>com.formkiq</groupId>
