--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,10 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <graalvm.version>21.1.0</graalvm.version>
-    <awssdk1.version>1.2.1</awssdk1.version>
-    <lambda-events.version>3.9.0</lambda-events.version>
-    <junit.version>5.7.2</junit.version>
-    <testcontainers.version>1.15.3</testcontainers.version>
+    <awssdk1.version>1.2.2</awssdk1.version>
+    <lambda-events.version>3.11.2</lambda-events.version>
+    <junit.version>5.9.3</junit.version>
+    <testcontainers.version>1.18.3</testcontainers.version>
   </properties>
 
   <dependencies>
@@ -47,13 +47,13 @@
     <dependency>
       <groupId>org.apache.httpcomponents.client5</groupId>
       <artifactId>httpclient5-fluent</artifactId>
-      <version>5.1</version>
+      <version>5.2.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.7</version>
+      <version>2.10.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -95,18 +95,23 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.23.1</version>
+      <version>3.24.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jdk14</artifactId>
-      <version>1.7.31</version>
+      <version>2.0.7</version>
     </dependency>
   </dependencies>
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.16.0</version>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
