--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,11 +16,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: ayltai/setup-graalvm@v1
+    - uses: graalvm/setup-graalvm@v1
       with:
-        java-version: 11
-        graalvm-version: 21.1.0
+        java-version: '11'
+        distribution: 'graalvm'
+        version: '22.3.2'
         native-image: true
+        native-image-job-reports: true
+        github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Build with Maven
       run: ./mvnw -B package
     - name: Configure AWS Credentials
