--- a/pom.xml
+++ b/pom.xml
@@ -123,9 +123,9 @@
         <version>2.22.2</version>
       </plugin>
       <plugin>
-        <groupId>pl.project13.maven</groupId>
-        <artifactId>git-commit-id-plugin</artifactId>
-        <version>4.0.4</version>
+        <groupId>io.github.git-commit-id</groupId>
+        <artifactId>git-commit-id-maven-plugin</artifactId>
+        <version>6.0.0</version>
         <executions>
           <execution>
             <goals>
